Rework of the IgnoreList system and additions to the IgnoreListNote GUI